tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__change_master_password_test__change_master_password_step1_empty.snap
---
source: tests/snapshot_tests/screens/change_master_password_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                             Verify Current Password                            "
"                 Enter your current master password to continue                 "
"                                                                                "
"               ┌ tui.import_export.current_password_label ──────┐               "
"               │Enter current password                          │               "
"               └────────────────────────────────────────────────┘               "
"                                                                                "
"                                                                                "
"                            Enter: verify | Esc: back                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
