tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__change_master_password_test__change_master_password_step1_filled.snap
---
source: tests/snapshot_tests/screens/change_master_password_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                             Verify Current Password                            "
"                 Enter your current master password to continue                 "
"                                                                                "
"               ┌ Current Password ──────────────────────────────┐               "
"               │•••••••••••••••••                               │               "
"               └────────────────────────────────────────────────┘               "
"                                                                                "
"                                                                                "
"                            Enter: verify | Esc: back                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
