tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__change_master_password_test__change_master_password_step2_confirm_focused.snap
---
source: tests/snapshot_tests/screens/change_master_password_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                               Set Master Password                              "
"                                                                                "
"               ┌ New Password ──────────────────────────────────┐               "
"               │•••••••••••••••••                               │               "
"               └────────────────────────────────────────────────┘               "
"               Strength: Strong ████████████░░░░                                "
"                                                                                "
"               ┌ Confirm password ──────────────────────────────┐               "
"               │••••••••                                        │               "
"               └────────────────────────────────────────────────┘               "
"                                                                                "
"                                                                                "
"                                                                                "
"                  Tab: switch field | Enter: submit | Esc: back                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
