tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__change_master_password_test__change_master_password_step2_new_focused_empty.snap
---
source: tests/snapshot_tests/screens/change_master_password_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                               Set Master Password                              "
"                                                                                "
"               ┌ New Password ──────────────────────────────────┐               "
"               │Enter new password                              │               "
"               └────────────────────────────────────────────────┘               "
"               Strength:                                                        "
"                                                                                "
"               ┌ Confirm password ──────────────────────────────┐               "
"               │Confirm new password                            │               "
"               └────────────────────────────────────────────────┘               "
"                                                                                "
"                                                                                "
"                                                                                "
"                  Tab: switch field | Enter: submit | Esc: back                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
